--- a/collectors/python.d.plugin/exim/metadata.yaml
+++ b/collectors/python.d.plugin/exim/metadata.yaml
@@ -4,7 +4,8 @@ meta:
   monitored_instance:
     name: Exim
     link: ''
-    categories: data-collection.mail-servers
+    categories:
+    - data-collection.mail-servers
     icon_filename: 'exim.jpg'
   related_resources:
     integrations:
