--- a/collectors/python.d.plugin/spigotmc/metadata.yaml
+++ b/collectors/python.d.plugin/spigotmc/metadata.yaml
@@ -4,7 +4,8 @@ meta:
   monitored_instance:
     name: SpigotMC
     link: ''
-    categories: data-collection.gaming
+    categories:
+    - data-collection.gaming
     icon_filename: 'spigot.jfif'
   related_resources:
     integrations:
