--- a/collectors/charts.d.plugin/ap/metadata.yaml
+++ b/collectors/charts.d.plugin/ap/metadata.yaml
@@ -4,7 +4,8 @@ meta:
   monitored_instance:
     name: Access Points
     link: ''
-    categories: data-collection.networking-stack-and-network-interfaces
+    categories:
+    - data-collection.networking-stack-and-network-interfaces
     icon_filename: 'netdata.png'
   related_resources:
     integrations:
