--- a/collectors/diskspace.plugin/metadata.yaml
+++ b/collectors/diskspace.plugin/metadata.yaml
@@ -4,7 +4,8 @@ meta:
   monitored_instance:
     name: Disk space
     link: ''
-    categories: data-collection.linux-systems
+    categories:
+    - data-collection.linux-systems
     icon_filename: 'hard-drive.svg'
   related_resources:
     integrations:
