--- a/collectors/python.d.plugin/boinc/metadata.yaml
+++ b/collectors/python.d.plugin/boinc/metadata.yaml
@@ -4,7 +4,8 @@ meta:
   monitored_instance:
     name: BOINC
     link: ''
-    categories: data-collection.distributed-computing-systems
+    categories:
+    - data-collection.distributed-computing-systems
     icon_filename: 'bolt.svg'
   related_resources:
     integrations:
