--- a/collectors/python.d.plugin/hddtemp/metadata.yaml
+++ b/collectors/python.d.plugin/hddtemp/metadata.yaml
@@ -4,7 +4,8 @@ meta:
   monitored_instance:
     name: HDD temperature
     link: ''
-    categories: data-collection.hardware-devices-and-sensors
+    categories:
+    - data-collection.hardware-devices-and-sensors
     icon_filename: 'hard-drive.svg'
   related_resources:
     integrations:
