--- a/collectors/python.d.plugin/icecast/metadata.yaml
+++ b/collectors/python.d.plugin/icecast/metadata.yaml
@@ -4,7 +4,8 @@ meta:
   monitored_instance:
     name: Icecast
     link: ''
-    categories: data-collection.media-streaming-servers
+    categories:
+    - data-collection.media-streaming-servers
     icon_filename: 'icecast.png'
   related_resources:
     integrations:
