--- a/collectors/python.d.plugin/litespeed/metadata.yaml
+++ b/collectors/python.d.plugin/litespeed/metadata.yaml
@@ -4,7 +4,8 @@ meta:
   monitored_instance:
     name: Litespeed
     link: ''
-    categories: data-collection.web-servers-and-web-proxies
+    categories:
+    - data-collection.web-servers-and-web-proxies
     icon_filename: 'litespeed.svg'
   related_resources:
     integrations:
