--- a/collectors/python.d.plugin/megacli/metadata.yaml
+++ b/collectors/python.d.plugin/megacli/metadata.yaml
@@ -4,7 +4,8 @@ meta:
   monitored_instance:
     name: MegaCLI
     link: ''
-    categories: data-collection.storage-mount-points-and-filesystems
+    categories:
+    - data-collection.storage-mount-points-and-filesystems
     icon_filename: 'hard-drive.svg'
   related_resources:
     integrations:
