--- a/collectors/python.d.plugin/memcached/metadata.yaml
+++ b/collectors/python.d.plugin/memcached/metadata.yaml
@@ -4,7 +4,8 @@ meta:
   monitored_instance:
     name: Memcached
     link: ''
-    categories: data-collection.database-servers
+    categories:
+    - data-collection.database-servers
     icon_filename: 'memcached.png'
   related_resources:
     integrations:
