--- a/collectors/python.d.plugin/riakkv/metadata.yaml
+++ b/collectors/python.d.plugin/riakkv/metadata.yaml
@@ -4,7 +4,8 @@ meta:
   monitored_instance:
     name: RiakKV
     link: ''
-    categories: data-collection.database-servers
+    categories:
+    - data-collection.database-servers
     icon_filename: 'riak.svg'
   related_resources:
     integrations:
