--- a/collectors/python.d.plugin/tor/metadata.yaml
+++ b/collectors/python.d.plugin/tor/metadata.yaml
@@ -4,7 +4,8 @@ meta:
   monitored_instance:
     name: Tor
     link: ''
-    categories: data-collection.vpns
+    categories:
+    - data-collection.vpns
     icon_filename: 'tor.png'
   related_resources:
     integrations:
