--- a/collectors/python.d.plugin/w1sensor/metadata.yaml
+++ b/collectors/python.d.plugin/w1sensor/metadata.yaml
@@ -4,7 +4,8 @@ meta:
   monitored_instance:
     name: 1-Wire Sensors
     link: ''
-    categories: data-collection.hardware-devices-and-sensors
+    categories:
+    - data-collection.hardware-devices-and-sensors
     icon_filename: '1-wire.png'
   related_resources:
     integrations:
