--- a/collectors/tc.plugin/metadata.yaml
+++ b/collectors/tc.plugin/metadata.yaml
@@ -4,7 +4,8 @@ meta:
   monitored_instance:
     name: tc
     link: ''
-    categories: data-collection.networking-stack-and-network-interfaces
+    categories:
+    - data-collection.networking-stack-and-network-interfaces
     icon_filename: 'freeradius.png'
   related_resources:
     integrations:
