--- a/collectors/cgroups.plugin/multi_metadata.yaml
+++ b/collectors/cgroups.plugin/multi_metadata.yaml
@@ -20,7 +20,7 @@ modules:
       most_popular: true
     overview:
       data_collection:
-        metrics_description: ""
+        metrics_description: "Monitor Containers for performance, resource usage, and health status."
         method_description: ""
       supported_platforms:
         include: []
@@ -398,7 +398,6 @@ modules:
               chart_type: line
               dimensions:
                 - name: mtu
-
   - <<: *module
     meta:
       <<: *meta
@@ -414,6 +413,9 @@ modules:
         - kubernetes
         - pods
         - containers
+    overview:
+      data-collection:
+        metrics_description: Monitor Kubernetes Clusters for performance, resource usage, and health status.
     alerts:
       - name: k8s_cgroup_10min_cpu_usage
         link: https://github.com/netdata/netdata/blob/master/health/health.d/cgroups.conf
@@ -792,7 +794,6 @@ modules:
               chart_type: line
               dimensions:
                 - name: mtu
-
   - <<: *module
     meta:
       <<: *meta
@@ -802,6 +803,12 @@ modules:
         icon_filename: systemd.png
         categories:
           - data-collection.systemd
+        keywords:
+          - systemd
+          - services
+    overview:
+      data-collection:
+        metrics_desctiption: "Monitor Systemd Services for performance, resource usage, and health status."
     alerts: []
     metrics:
       folding:
@@ -972,6 +979,9 @@ modules:
         - vms
         - virtualization
         - container
+    overview:
+      data_collection:
+        metrics_description: "Monitor Virtual Machines for performance, resource usage, and health status."
   - <<: *module
     meta:
       <<: *meta
@@ -985,6 +995,9 @@ modules:
         - lxc
         - lxd
         - container
+    overview:
+      data_collection:
+        metrics_description: "Monitor LXC Containers for performance, resource usage, and health status."
   - <<: *module
     meta:
       <<: *meta
@@ -1009,6 +1022,9 @@ modules:
       keywords:
         - ovirt
         - container
+    overview:
+      data_collection:
+        metrics_description: "Monitor oVirt for performance, resource usage, and health status."
   - <<: *module
     meta:
       <<: *meta
@@ -1021,3 +1037,6 @@ modules:
       keywords:
         - proxmox
         - container
+    overview:
+      data_collection:
+        metrics_description: "Monitor Proxmox for performance, resource usage, and health status."
