--- a/collectors/debugfs.plugin/multi_metadata.yaml
+++ b/collectors/debugfs.plugin/multi_metadata.yaml
@@ -80,7 +80,7 @@ modules:
               description: The NUMA node the metrics are associated with.
           metrics:
             - name: mem.fragmentation_index_dma
-              description: Memory fragmentation index for each order within the DMA zone
+              description: Memory fragmentation index for each order
               unit: "index"
               chart_type: line
               dimensions:
@@ -96,7 +96,7 @@ modules:
                 - name: order9
                 - name: order10
             - name: mem.fragmentation_index_dma32
-              description: Memory fragmentation index for each order within the DMA32 zone
+              description: Memory fragmentation index for each order
               unit: "index"
               chart_type: line
               dimensions:
@@ -112,7 +112,7 @@ modules:
                 - name: order9
                 - name: order10
             - name: mem.fragmentation_index_normal
-              description: Memory fragmentation index for each order within the Normal zone
+              description: Memory fragmentation index for each order
               unit: "index"
               chart_type: line
               dimensions:
