--- a/collectors/charts.d.plugin/sensors/metadata.yaml
+++ b/collectors/charts.d.plugin/sensors/metadata.yaml
@@ -2,10 +2,11 @@ meta:
   plugin_name: charts.d.plugin
   module_name: sensors
   monitored_instance:
-    name: charts.d sensors
+    name: Linux Sensors (sysfs)
     link: ''
-    categories: []
-    icon_filename: ''
+    categories:
+      - data-collection.hardware-devices-and-sensors
+    icon_filename: 'microchip.svg'
   related_resources:
     integrations:
       list: []
@@ -15,7 +16,7 @@ meta:
   most_popular: false
 overview:
   data_collection:
-    metrics_description: ''
+    metrics_description: "Examine Linux Sensors metrics with Netdata for insights into hardware health and performance. Enhance your system's reliability with real-time hardware health insights."
     method_description: ''
   supported_platforms:
     include: []
